--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -60,7 +60,7 @@ import { createSmartAccountClient } from "@biconomy/account";
 const biconomySmartAccountConfig = {
   signer: signer,
   bundlerUrl: "", // <-- Read about this at https://docs.biconomy.io/dashboard#bundler-url
-  biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // <-- Read about this here
+  biconomyPaymasterApiKey: "", // <-- Read about at https://docs.biconomy.io/dashboard/paymaster
 };
 
 const biconomySmartAccount = await createSmartAccountClient(
