--- a/docs/Paymaster/integration.mdx
+++ b/docs/Paymaster/integration.mdx
@@ -55,7 +55,7 @@ Set up a paymaster for the smart account by providing only the paymaster API key
       chainId: 80001
   bundlerUrl:
     "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
-  biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster", // <-- Read about this here
+  biconomyPaymasterApiKey: "", // <-- Read about at https://docs.biconomy.io/dashboard/paymaster
     }
   );
 ```
