updates to overview + minor updates

--- a/docs/Modules/index.mdx
+++ b/docs/Modules/index.mdx
@@ -5,9 +5,11 @@ sidebar_position: 6
 ---
 # Modules
 
-Modular smart accounts (MSA) offer more flexibility than 'static' accounts. Static accounts often need a developer for changes and involve complex proxy upgrades. In contrast, with MSA the functionalities are moved to external contracts called `modules` to increase the speed of feature development. MSA lets users install or uninstall these modules, avoiding the need for entire account redeployment.
+Modular smart accounts (MSA) offer more flexibility than 'static' accounts. Static accounts often need a developer for changes and involve complex proxy upgrades.
 
-Biconomy MSA (Modular Smart Account) has two types of modules:
+In contrast, with MSA the functionality is moved to external contracts called `modules` to increase the speed of feature development. MSA lets users install or uninstall these modules, avoiding the need for entire account redeployment.
+
+Biconomy MSA (Modular Smart Accounts) have two types of modules:
 
 - **Validation modules** - These modules define different signature schemes or authorization mechanisms to validate who is allowed to perform what action on the account, by implementing standard interfaces.
 - **Execution modules** - These modules define custom execution functions to facilitate the actions allowed by the account.
