--- a/docs/Paymaster/supportedNetworks.mdx
+++ b/docs/Paymaster/supportedNetworks.mdx
@@ -25,7 +25,7 @@ sidebar_position: 4
 |Mantle | ✅ | ✅ |  
 |capX | ✅ |  |  
 
-## Tokens Supported
+## Supported Tokens
 Our Paymaster not only allows you to sponsor transactions for your users but also allows users to pay for transactions using ERC20 tokens. Below are the supported tokens list grouped by chain.
 
 Please note that we will be reviewing DEX activity on each network to determine additional ERC20 token support on an ongoing basis.
