--- a/docs/Paymaster/supportedNetworks.mdx
+++ b/docs/Paymaster/supportedNetworks.mdx
@@ -24,6 +24,7 @@ sidebar_position: 4
 |Combo | ✅ | ✅ |  
 |Mantle | ✅ | ✅ |  
 |capX | ✅ |  |  
+|Blast | ✅ |  | 
 
 ## Supported Tokens
 Our Paymaster not only allows you to sponsor transactions for your users but also allows users to pay for transactions using ERC20 tokens. Below are the supported tokens list grouped by chain.
