--- a/docs/Bundler/supportedNetworks.mdx
+++ b/docs/Bundler/supportedNetworks.mdx
@@ -28,6 +28,7 @@ This is  the list of networks supported by our Bundlers.
 |Combo | ✅ | ✅ |  
 |Mantle | ✅ | ✅ |  
 |capX | ✅ |  | 
+|Blast | ✅ |  | 
 
 For test networks, replace the `chainId` in the `bundlerUrl` by your own `chainId`. The bundler URL can be obtained from the dashboard.
 
