--- a/docs/Modules/ecdsa.mdx
+++ b/docs/Modules/ecdsa.mdx
@@ -44,12 +44,7 @@ One of the most popular modules, it bridges the ease of traditional web logins w
 
 There is no need to do anything in order to use ECDSAOwnershipValidationModule, this module is set by default on every smart account.
 
-### Usage
-
-| Key                                                                                                              | Description                                                                                                                           |
-| ---------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------- |
-| [signer](https://bcnmy.github.io/biconomy-client-sdk/packages/account/docs/interfaces/SmartAccountSigner.html)   | This signer will be used for signing userOps for any transactions you build. Will accept ethers.JsonRpcSigner as well as a viemWallet |
-| [ecdsaModuleConfig](https://bcnmy.github.io/biconomy-client-sdk/interfaces/ECDSAOwnershipValidationModuleConfig) | The configuration options expected during module initialisation                                                                       |
+**Usage**
 
 ```ts
 import {
@@ -72,6 +67,19 @@ const smartAccount = await createSmartAccountClient({
 const saModuleAddress = await smartAccount.activeValidationModule.getAddress();
 console.log(saModuleAddress === defaultValidationModule.moduleAddress); // true
 ```
+
+**Parameters**
+
+_required params are explicitly mentioned_
+
+- signer(`Signer`, required): Pass the signer instance into the validation module which gets used to detect owner of the smart account.
+- entryPointAddress(`Hex`): Defaults to `"0x5ff137d4b0fdcd49dca30c7cf57e578a026d2789"`
+- moduleAddress(`Hex`): Defaults to `"0x0000001c5b32F37F5beA87BDD5374eB2aC54eA8e"`
+- version(ModuleVersion): Defaults to `"V1_0_0"`
+
+**Returns**
+
+- `ecdsaOwnershipValidationModule` (`ECDSAOwnershipValidationModule`): An instance of the Biconomy ECDSA ownership validation module.
 
 :::info
 The Smart Account's address is counterfactually generated based on the signer's public key, which is the owner's address used in the ECDSA Module. This feature allows for the pre-calculation of the account address before deployment.
