Added batched router tutorial + fixes in docs

--- a/docs/Modules/BatchedSession.mdx
+++ b/docs/Modules/BatchedSession.mdx
@@ -58,4 +58,4 @@ const sessionRouterModule = await createBatchedSessionRouterModule({
 });
 ```
 
-Implementation of this is similar to the Session Key Manager module guide - a full timplementation example is shown [here](https://github.com/bcnmy/sdk-demo/blob/dev-v2/src/components/Modules/CreateBatchRouter.tsx)
+Implementation of this is similar to the Session Key Manager module guide - a full timplementation example is shown [here](/tutorials/sessionkeys/batchedTransferWithSession)
