--- a/docs/Modules/BatchedSession.mdx
+++ b/docs/Modules/BatchedSession.mdx
@@ -58,4 +58,4 @@ const sessionRouterModule = await createBatchedSessionRouterModule({
 });
 ```
 
-Implementation of this is similar to the Session Key Manager module guide - a full timplementation example is shown [here](/tutorials/sessionkeys/batchedTransferWithSession)
+Implementation of this is similar to the Session Key Manager module guide - a full implementation example is shown [here](/tutorials/sessionkeys/batchedTransferWithSession)
