--- a/docs/Bundler/supportedNetworks.mdx
+++ b/docs/Bundler/supportedNetworks.mdx
@@ -16,7 +16,7 @@ This is  the list of networks supported by our Bundlers.
 |Polygon zkEVM  | ✅ | ✅ |  
 |Arbitrum One  | ✅ | ✅ |  
 |Arbitrum Nova  | ✅ | ✅ |  
-|Optimism  | ✅ | ✅ |  
+|Optimism  | ✅ (Sepolia)| ✅ |  
 |Avalanche  | ✅ | ✅ |  
 |Base | ✅ | ✅ |    
 |Linea | ✅ | ✅ |    
@@ -29,6 +29,9 @@ This is  the list of networks supported by our Bundlers.
 |Mantle | ✅ | ✅ |  
 |capX | ✅ |  | 
 |Blast | ✅ | ✅ | 
+|Zeroone | ✅ |  | 
+|Scroll | ✅ | ✅ | 
+|Zetachain |  | ✅ | 
 
 For test networks, replace the `chainId` in the `bundlerUrl` by your own `chainId`. The bundler URL can be obtained from the dashboard.
 
