--- a/docs/GasEstimations/index.mdx
+++ b/docs/GasEstimations/index.mdx
@@ -13,7 +13,7 @@ Accurately estimating them is very important because if not the following can ha
 - If callGasLimit is not enough the transaction will be inculded on chain but the the call data execution will not be completed and the paymater or account will still pay for the userOp
 - If verificationGasLimit is low the userOp will revert in simulation step
 
-All the above problems result in bad UX, failed and reverted transactions which also are sometimes ahrd to debug.
+All the above problems result in bad UX, failed and reverted transactions which are also hard to debug.
 We at biconomy have come up with ways estimate gas limits accurately so that such edge cases don't occur. All this is done in an npm package so that any other infra provider can resuse the same logic on their end.
 
 To dive deep into the workings of the contracts and logic of the package, please read this blog. ADD BLOG LINK
