--- a/docs/GasEstimations/index.mdx
+++ b/docs/GasEstimations/index.mdx
@@ -4,7 +4,7 @@ sidebar_position: 6
 title: Gas Estimations
 ---
 
-While sending a userOp callGasLimit, verificationGasLimit and preVerficationGas have to be estimated accurately to get the userOp be included on the chain.
+While sending a userOp, It is essential to accurately estimate callGasLimit, verificationGasLimit and preVerficationGas. This ensures the userOp be included on the chain.
 The exact definition of these values are mentioned in the ERC 4337 spec [here](https://eips.ethereum.org/EIPS/eip-4337#useroperation).
 
 Accurately estimating them is very important because if not the following can happen:
