--- a/docs/GasEstimations/integration.mdx
+++ b/docs/GasEstimations/integration.mdx
@@ -5,7 +5,7 @@ custom_edit_url: https://github.com/bcnmy/docs/blob/master/docs/GasEstimations/i
 
 # Integration
 
-This guide focuses on the code to integrate the entry point gas estimations package,
+This guide focuses on the code to integrate the entry point gas estimations package.
 
 ## Installation
 
