--- a/docs/GasEstimations/index.mdx
+++ b/docs/GasEstimations/index.mdx
@@ -4,8 +4,8 @@ sidebar_position: 6
 title: Gas Estimations
 ---
 
-While sending a userOp, It is essential to accurately estimate callGasLimit, verificationGasLimit and preVerficationGas. This ensures the userOp be included on the chain.
-The exact definition of these values are mentioned in the ERC 4337 spec [here](https://eips.ethereum.org/EIPS/eip-4337#useroperation).
+While sending a userOp, It is essential to accurately estimate callGasLimit, verificationGasLimit and preVerficationGas. This ensures the userOp is included on the chain.
+The exact definition of these values is mentioned in the ERC 4337 spec [here](https://eips.ethereum.org/EIPS/eip-4337#useroperation).
 
 Accurately estimating gas limits is crucial, as failure to do so may result in the following scenarios:
 
