setEntryPointAddress added + removed blog content

--- a/docs/GasEstimations/integration.mdx
+++ b/docs/GasEstimations/integration.mdx
@@ -72,6 +72,7 @@ const scrollGasEstimator = createScrollGasEstimator({
 **Parameters**
 
 - rpcUrl(`string`, required): RPC Url of the network
+- entryPointAddress(`string`): optional entry point if it is different than 0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789
 
 **returns**
 
