--- a/docs/GasEstimations/index.mdx
+++ b/docs/GasEstimations/index.mdx
@@ -10,7 +10,7 @@ The exact definition of these values is mentioned in the ERC 4337 spec [here](ht
 Accurately estimating gas limits is crucial, as failure to do so may result in the following scenarios:
 
 - If preVerfiicationGas is not enough the userOp can be rejected by bundlers
-- If callGasLimit is not enough the transaction will be included on chain but the call data execution will not be completed and the paymaster or account will still pay for the userOp
+- If callGasLimit is not enough the transaction will be included on-chain but the call data execution will not be completed and the paymaster or account will still pay for the userOp
 - If verificationGasLimit is low the userOp will revert to the simulation step
 
 All the above problems result in bad UX, failed and reverted transactions which are also hard to debug.
