--- a/docs/supportedNetworks.mdx
+++ b/docs/supportedNetworks.mdx
@@ -28,7 +28,7 @@ This is  the list of networks supported by our Bundlers & Paymaster.
 |Blast | ✅ | ✅ | 
 |Zeroone | ✅ |  | 
 |Scroll | ✅ | ✅ | 
-|Bera | ✅ | ✅ | 
+|Bera | ✅ |  | 
 |Zetachain |  | ✅ | 
 
 ## Supported Tokens
