Update supported chains section (#242)
* Update section

* Update section

* fix build error

* fix testnet

--- a/docs/supportedNetworks.mdx
+++ b/docs/supportedNetworks.mdx
@@ -1,8 +1,10 @@
 ---
-sidebar_label: "Supported Networks"
+sidebar_label: "Supported Networks & Tokens"
 title: "Supported Networks"
-sidebar_position: 4
+sidebar_position: 13
 ---
+
+This is  the list of networks supported by our Bundlers & Paymaster.
 
 |Network | Testnet | Mainnet |   
 | --- | --- | --- |
@@ -26,6 +28,7 @@ sidebar_position: 4
 |Blast | ✅ | ✅ | 
 |Zeroone | ✅ |  | 
 |Scroll | ✅ | ✅ | 
+|Bera | ✅ |  | 
 |Zetachain |  | ✅ | 
 
 ## Supported Tokens
