--- a/docs/GasEstimations/index.mdx
+++ b/docs/GasEstimations/index.mdx
@@ -1,8 +1,9 @@
 ---
 slug: /gas-estimations
 sidebar_position: 6
-title: Gas Estimations
+title: Gas Estimations SDK
 ---
+The Gas estimation SDK enables you to estimate gas limits accurately. This functionality is packaged within an npm package, enabling other infrastructure providers to reuse the same logic.
 
 While sending a userOp, It is essential to accurately estimate callGasLimit, verificationGasLimit and preVerficationGas. This ensures the userOp is included on the chain.
 The exact definition of these values is mentioned in the ERC 4337 spec [here](https://eips.ethereum.org/EIPS/eip-4337#useroperation).
@@ -14,7 +15,6 @@ Accurately estimating gas limits is crucial, as failure to do so may result in t
 - If verificationGasLimit is low the userOp will revert to the simulation step
 
 All the above problems result in bad UX, failed and reverted transactions which are also hard to debug.
-The Gas estimation SDK enables you to estimate gas limits accurately to avoid such edge cases. This functionality is packaged within an npm package, enabling other infrastructure providers to reuse the same logic.
 
 ```mdx-code-block
 import DocCardList from '@theme/DocCardList';
