Added tutorials at the end of Quickstart

--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -232,4 +232,21 @@ If you run into any errors, check out [troubleshooting](/troubleshooting/commone
 
 🎉 **Congratulations on completing the quickstart!**
 
+## Check out Tutorials
+
+Get your hands dirty by trying out the following tutorials in your environment.
+
+### [1. Send A Simple Transaction](/tutorials/sendSimpleTransaction)
+In this you will do a simple transaction which will be a user paid transaction for which your smart account should have funds to pay the gas fees for the txn.
+
+### [2. Send A Batch of Transactions](/tutorials/sendTransactionsBatch)
+In this you will do batching of transactions which is sending more than one transaction in an array and execute them with a single signature.
+
+### [3. Send A Gasless Transaction](/tutorials/sendGasless)
+In this you will do a gasless transaction for which you will not have to pay any gas fees and with empty funds in your smart account you can execute transactions.
+
+### [4. Pay gas in ERC20](/tutorials/payERC20Token)
+In this you will execute a transaction by paying gas fees in ERC20 tokens, for this your smart account should have the specific ERC20 token for paying gas fees.
+
+
 To dive deeper, check out more [use cases](/tutorials) and follow [this guide for gasless transactions](/tutorials/sendGasless).
