--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -237,7 +237,7 @@ If you run into any errors, check out [troubleshooting](/troubleshooting/commone
 Get your hands dirty by trying out the following tutorials in your environment.
 
 
-### [2. Send A Batch of Transactions](/tutorials/sendTransactionsBatch)
+### [Send a batch of transactions](/tutorials/sendTransactionsBatch)
 In this you will do batching of transactions which is sending more than one transaction in an array and execute them with a single signature.
 
 ### [3. Send A Gasless Transaction](/tutorials/sendGasless)
