--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -240,7 +240,7 @@ Get your hands dirty by trying out the following tutorials in your environment.
 ### [Send a batch of transactions](/tutorials/sendTransactionsBatch)
 In this you will do batching of transactions which is sending more than one transaction in an array and execute them with a single signature.
 
-### [3. Send A Gasless Transaction](/tutorials/sendGasless)
+### [Send a gasless transaction](/tutorials/sendGasless)
 In this you will do a gasless transaction for which you will not have to pay any gas fees and with empty funds in your smart account you can execute transactions.
 
 ### [4. Pay gas in ERC20](/tutorials/payERC20Token)
