--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -243,7 +243,7 @@ In this you will do batching of transactions which is sending more than one tran
 ### [Send a gasless transaction](/tutorials/sendGasless)
 In this you will do a gasless transaction for which you will not have to pay any gas fees and with empty funds in your smart account you can execute transactions.
 
-### [4. Pay gas in ERC20](/tutorials/payERC20Token)
+### [Pay gas in ERC20](/tutorials/payERC20Token)
 In this you will execute a transaction by paying gas fees in ERC20 tokens, for this your smart account should have the specific ERC20 token for paying gas fees.
 
 
