--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -234,7 +234,7 @@ If you run into any errors, check out [troubleshooting](/troubleshooting/commone
 
 ## Check out Tutorials
 
-Get your hands dirty by trying out the following tutorials in your environment.
+Explore the tutorials for various use cases.
 
 
 ### [Send a batch of transactions](/tutorials/sendTransactionsBatch)
