--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -247,4 +247,4 @@ In this you will do a gasless transaction for which you will not have to pay any
 In this you will execute a transaction by paying gas fees in ERC20 tokens, for this your smart account should have the specific ERC20 token for paying gas fees.
 
 
-To dive deeper, check out more [use cases](/tutorials) and follow [this guide for gasless transactions](/tutorials/sendGasless).
+To dive deeper, check out more [use cases](/tutorials).
