Added tutorials at the end of Quickstart (#251)
* Added tutorials at the end of Quickstart

* Update docs/quickstart.mdx

Co-authored-by: Himanshu garg <garg91824@gmail.com>

* Update docs/quickstart.mdx

Co-authored-by: Himanshu garg <garg91824@gmail.com>

* Update docs/quickstart.mdx

Co-authored-by: Himanshu garg <garg91824@gmail.com>

* Update docs/quickstart.mdx

Co-authored-by: Himanshu garg <garg91824@gmail.com>

* Update docs/quickstart.mdx

Co-authored-by: Himanshu garg <garg91824@gmail.com>

* Update docs/quickstart.mdx

Co-authored-by: Himanshu garg <garg91824@gmail.com>

* Update docs/quickstart.mdx

Co-authored-by: Himanshu garg <garg91824@gmail.com>

---------

Co-authored-by: Himanshu garg <garg91824@gmail.com>

--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -232,4 +232,19 @@ If you run into any errors, check out [troubleshooting](/troubleshooting/commone
 
 🎉 **Congratulations on completing the quickstart!**
 
-To dive deeper, check out more [use cases](/tutorials) and follow [this guide for gasless transactions](/tutorials/sendGasless).
+## Check out Tutorials
+
+Explore the tutorials for various use cases.
+
+
+### [Send a batch of transactions](/tutorials/sendTransactionsBatch)
+In this you will do batching of transactions which is sending more than one transaction in an array and execute them with a single signature.
+
+### [Send a gasless transaction](/tutorials/sendGasless)
+In this you will do a gasless transaction for which you will not have to pay any gas fees and with empty funds in your smart account you can execute transactions.
+
+### [Pay gas in ERC20](/tutorials/payERC20Token)
+In this you will execute a transaction by paying gas fees in ERC20 tokens, for this your smart account should have the specific ERC20 token for paying gas fees.
+
+
+To dive deeper, check out more [use cases](/tutorials).
