--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -37,7 +37,8 @@ Create the following tsconfig.json (TypeScript config):
     "declaration": true,
     "outDir": "./lib",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["./**/*.ts"]
 }
