update supported chains

--- a/docs/supportedNetworks.mdx
+++ b/docs/supportedNetworks.mdx
@@ -29,7 +29,7 @@ This is  the list of networks supported by our Bundlers & Paymaster.
 |Zeroone | ✅ | ✅ | 
 |Scroll | ✅ | ✅ | 
 |Bera | ✅ |  | 
-|Zetachain | ✅ |  | 
+|Zetachain | ✅ | ✅ | 
 |Gold (L3 on Base) |  | ✅ | 
 |Degenchain |  | ✅ | 
 |Olive | ✅ |  | 
