--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -221,7 +221,7 @@ let partialUserOp2 = await polygonAccount.buildUserOp([transaction], {
 // Use multichain module to sign once for all ops
 const returnedOps = await multiChainModule.signUserOps([
   { userOp: partialUserOp1, chainId: ChainId.BASE_GOERLI_TESTNET },
-  { userOp: partialUserOp2, chainId: ChainId.POLYGON_MUMBAI },
+  { userOp: partialUserOp2, chainId: ChainId.POLYGON_AMOY },
 ]);
 
 const userOpResponse1 = await baseAccount.sendSignedUserOp(
